--- a/package.json
+++ b/package.json
@@ -9,19 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "chart.js": "^4.4.6",
+    "firebase": "^11.0.1",
     "fit-file-parser": "^1.10.0",
     "next": "15.0.3",
     "react": "^18.3.1",
-    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
+    "recharts": "^2.12.7",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/node": "22.5.4",
     "@types/react": "18.3.5",
+    "autoprefixer": "^10.4.20",
     "eslint": "9.14.0",
     "eslint-config-next": "15.0.3",
+    "postcss": "^8.4.45",
+    "tailwindcss": "^3.4.14",
     "typescript": "5.6.3"
   }
 }
